--- a/project.ipynb
+++ b/project.ipynb
@@ -1923,6 +1923,407 @@
    "source": [
     "validate_serving_input(model_uri,serving_payload)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d956e32",
+   "metadata": {},
+   "source": [
+    "## Load the model back for prediction as a generic python function model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "2d3bc651",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal length (cm)</th>\n",
+       "      <th>sepal width (cm)</th>\n",
+       "      <th>petal length (cm)</th>\n",
+       "      <th>petal width (cm)</th>\n",
+       "      <th>actual_class</th>\n",
+       "      <th>predicted_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2.7</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>6.4</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>5.7</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>6.9</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>6.6</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>4.4</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>5.5</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>4.8</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    sepal length (cm)  sepal width (cm)  petal length (cm)  petal width (cm)  \\\n",
+       "0                 4.9               3.6                1.4               0.1   \n",
+       "1                 6.4               2.8                5.6               2.1   \n",
+       "2                 6.4               2.7                5.3               1.9   \n",
+       "3                 6.4               2.9                4.3               1.3   \n",
+       "4                 5.1               3.8                1.5               0.3   \n",
+       "5                 5.0               3.3                1.4               0.2   \n",
+       "6                 5.7               2.9                4.2               1.3   \n",
+       "7                 6.0               2.2                5.0               1.5   \n",
+       "8                 4.9               3.1                1.5               0.2   \n",
+       "9                 6.1               2.6                5.6               1.4   \n",
+       "10                6.3               2.3                4.4               1.3   \n",
+       "11                5.0               3.5                1.3               0.3   \n",
+       "12                5.7               2.5                5.0               2.0   \n",
+       "13                6.3               2.5                4.9               1.5   \n",
+       "14                6.7               3.1                4.4               1.4   \n",
+       "15                5.5               3.5                1.3               0.2   \n",
+       "16                6.2               2.2                4.5               1.5   \n",
+       "17                6.9               3.1                5.1               2.3   \n",
+       "18                5.5               2.4                3.8               1.1   \n",
+       "19                4.9               2.5                4.5               1.7   \n",
+       "20                4.8               3.4                1.9               0.2   \n",
+       "21                5.0               2.3                3.3               1.0   \n",
+       "22                6.1               2.9                4.7               1.4   \n",
+       "23                6.6               3.0                4.4               1.4   \n",
+       "24                5.5               4.2                1.4               0.2   \n",
+       "25                4.4               2.9                1.4               0.2   \n",
+       "26                5.5               2.3                4.0               1.3   \n",
+       "27                6.7               3.0                5.0               1.7   \n",
+       "28                4.8               3.0                1.4               0.1   \n",
+       "29                6.3               3.4                5.6               2.4   \n",
+       "\n",
+       "    actual_class  predicted_class  \n",
+       "0              0                0  \n",
+       "1              2                2  \n",
+       "2              2                2  \n",
+       "3              1                1  \n",
+       "4              0                0  \n",
+       "5              0                0  \n",
+       "6              1                1  \n",
+       "7              2                1  \n",
+       "8              0                0  \n",
+       "9              2                2  \n",
+       "10             1                1  \n",
+       "11             0                0  \n",
+       "12             2                2  \n",
+       "13             1                1  \n",
+       "14             1                1  \n",
+       "15             0                0  \n",
+       "16             1                1  \n",
+       "17             2                2  \n",
+       "18             1                1  \n",
+       "19             2                1  \n",
+       "20             0                0  \n",
+       "21             1                1  \n",
+       "22             1                1  \n",
+       "23             1                1  \n",
+       "24             0                0  \n",
+       "25             0                0  \n",
+       "26             1                1  \n",
+       "27             1                2  \n",
+       "28             0                0  \n",
+       "29             2                2  "
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model = mlflow.pyfunc.load_model(model_info.model_uri)\n",
+    "prediction = loaded_model.predict(X_test)\n",
+    "\n",
+    "iris_features_name = datasets.load_iris().feature_names\n",
+    "\n",
+    "result = pd.DataFrame(X_test,columns=iris_features_name)\n",
+    "result['actual_class'] = y_test\n",
+    "result['predicted_class'] = prediction\n",
+    "result"
+   ]
   }
  ],
  "metadata": {
